# powerfox

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  sqlx-data.json
.sqlx/: query-06812bbe121af1abfdccb017dfa77803530f033db4b93bde4cadf96946c83c6c.json  query-0b6bf4afa49cb5cb4602b87b93564fb51da0efe127e557c119c96ff239aabb2f.json  query-3cfaa48b7d7ffe09305f6a2ccb49737674dc08eb2d72f9006ca3c4c0bd4bd7f3.json  query-46134046efc1623e389a7dfe8ee0042c713368eff27c6608f3d162864d6a995c.json  query-922dda0d16b61a25068183d3b7c7892ad15d72e175433a4e35cab33d0263acfb.json  query-93636c5d7f9d88fa262a17e56a22654fb6422bdd37f4689fa34e2e667488a79c.json  query-9740c4b073559d95700d5cc65874c462600c6a59b28f7f3b1a72ec1b257fdf30.json  query-a1dfc9dc1294f8440e4f4d2f97fa9d91ba01638a5d427b480740d9b7ad67f0a1.json
docs/: powerfox-daily.timer  systemd.sh
examples/: device.json  report.json  temperature.json
scripts/: docker.sh  powerfox-daily.service  powerfox-daily.timer  powerfox.http  systemd.sh  trigger.http
sql/: create.sql  initial-config.sql
src/: db.rs  discord.rs  main.rs  meteo.rs  powerfox.rs  util.rs
