[package]
name = "powerfox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_repr = "0.1"
chrono = { version = "0.4", features = ["serde"] }
sqlx = {version = "0.7.0-alpha.3", features = ["chrono", "postgres", "runtime-tokio", "uuid"]}
uuid = {version = "1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
clokwerk = "0.4.0"
