[package]
name = "powerfox"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sqlx = { version = "0.7", features = [
    "chrono",
    "postgres",
    "uuid",
    "runtime-tokio-rustls",
] }
anyhow = "1.0"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_repr = "0.1"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
log = "0.4"
env_logger = "0.11"
poise = "0.6.1"

[dependencies.uuid]
version = "1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.serenity]
default-features = false
features = ["builder", "chrono", "client", "gateway", "model", "rustls_backend"]
version = "0.12"
